# energy-intelligence-system

./: .gitignore  DATABASE_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  README.md  START_BACKEND.bat  START_FRONTEND.bat  persist-reports.patch
AI/: train_models.py
AI/models/: anomaly_detector.py  lstm_forecaster.py
AI/optimization/: load_optimizer.py
AI/preprocessing/: csv_analyzer.py  pipeline.py
AI/scoring/: anomaly_fixes.py  energy_score.py
energy-backend/: energy_platform.db  pyproject.toml
energy-backend/app/: config.py  main.py
energy-backend/app/models_db/: analysis_report.py  database.py  trained_dataset.py  user.py
energy-backend/app/routes/: ai_routes.py  auth_routes.py
energy-backend/app/services/: ai_service.py  auth_service.py
energy-frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
energy-frontend/src/: App.tsx  index.css
energy-frontend/src/components/: AIMetricsPanel.tsx  AnomalyAlerts.tsx  EnergyScoreCard.tsx  ForecastChart.tsx  OptimizationPanel.tsx  UploadAnalysisPanel.tsx
energy-frontend/src/lib/: api.ts  auth-context.tsx  currency.ts
energy-frontend/src/pages/: DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  SignupPage.tsx
